// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Footer snapshot renders 1`] = `
<div
  className="MuiContainer-root MuiContainer-maxWidthLg"
>
  <div
    className="MuiGrid-root MuiGrid-container MuiGrid-align-items-xs-center"
  >
    <div
      className="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-justify-xs-center MuiGrid-grid-xs-3"
    >
      <span
        aria-disabled={false}
        aria-label="Home"
        className="MuiButtonBase-root MuiIconButton-root makeStyles-homeIcon-9"
        onBlur={[Function]}
        onClick={[Function]}
        onDragLeave={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        role="button"
        tabIndex={0}
      >
        <span
          className="MuiIconButton-label"
        >
          <svg
            aria-hidden="true"
            className="MuiSvgIcon-root"
            focusable="false"
            role="presentation"
            viewBox="0 0 24 24"
          >
            <path
              d="M10 20v-6h4v6h5v-8h3L12 3 2 12h3v8z"
            />
          </svg>
        </span>
      </span>
    </div>
    <div
      className="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-justify-xs-center MuiGrid-grid-xs-6"
    >
      <img
        alt="Logo"
        src="header1.png"
        width="40%"
      />
    </div>
    <div
      className="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-justify-xs-center MuiGrid-grid-xs-3"
    >
      <svg
        aria-hidden="true"
        className="MuiSvgIcon-root makeStyles-connectIcon-10 makeStyles-connectIcon-11 MuiSvgIcon-fontSizeSmall"
        focusable="false"
        role="presentation"
        viewBox="0 0 24 24"
      >
        <path
          d="M24 24H0V0h24v24z"
          fill="none"
        />
        <circle
          cx="12"
          cy="12"
          r="8"
        />
      </svg>
    </div>
  </div>
  <div
    className="MuiGrid-root MuiGrid-container MuiGrid-align-items-xs-center MuiGrid-justify-xs-center"
  >
    <div
      className="MuiGrid-root MuiGrid-item"
      color="primary"
    >
      <div
        className="MuiCircularProgress-root MuiCircularProgress-colorPrimary MuiCircularProgress-indeterminate"
        role="progressbar"
        style={
          Object {
            "height": 40,
            "width": 40,
          }
        }
      >
        <svg
          className="MuiCircularProgress-svg"
          viewBox="22 22 44 44"
        >
          <circle
            className="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate"
            cx={44}
            cy={44}
            fill="none"
            r={20.2}
            strokeWidth={3.6}
            style={Object {}}
          />
        </svg>
      </div>
    </div>
  </div>
  <div
    className="MuiGrid-root MuiGrid-container MuiGrid-align-items-xs-center MuiGrid-justify-xs-center"
  >
    <p
      className="MuiTypography-root MuiTypography-body2 MuiTypography-colorTextSecondary MuiTypography-alignCenter"
    >
      Made by 
      <a
        className="MuiTypography-root MuiLink-root MuiLink-underlineHover MuiTypography-colorInherit"
        href="https://github.com/jecombe"
        onBlur={[Function]}
        onFocus={[Function]}
      >
        jecombe
      </a>
       & 
      <a
        className="MuiTypography-root MuiLink-root MuiLink-underlineHover MuiTypography-colorInherit"
        href="https://github.com/dz0nda"
        onBlur={[Function]}
        onFocus={[Function]}
      >
        dzonda
      </a>
       • 
      2019
    </p>
  </div>
</div>
`;

exports[`Footer snapshot renders 2`] = `
<div
  className="MuiGrid-root MuiGrid-container MuiGrid-align-items-xs-center MuiGrid-justify-xs-center"
>
  <p
    className="MuiTypography-root MuiTypography-body2 MuiTypography-colorTextSecondary MuiTypography-alignCenter"
  >
    Made by 
    <a
      className="MuiTypography-root MuiLink-root MuiLink-underlineHover MuiTypography-colorInherit"
      href="https://github.com/jecombe"
      onBlur={[Function]}
      onFocus={[Function]}
    >
      jecombe
    </a>
     & 
    <a
      className="MuiTypography-root MuiLink-root MuiLink-underlineHover MuiTypography-colorInherit"
      href="https://github.com/dz0nda"
      onBlur={[Function]}
      onFocus={[Function]}
    >
      dzonda
    </a>
     • 
    2019
  </p>
</div>
`;

exports[`Footer snapshot renders 3`] = `
<div
  className="MuiGrid-root MuiGrid-container MuiGrid-align-items-xs-center"
>
  <div
    className="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-justify-xs-center MuiGrid-grid-xs-3"
  >
    <span
      aria-disabled={false}
      aria-label="Home"
      className="MuiButtonBase-root MuiIconButton-root makeStyles-homeIcon-333"
      onBlur={[Function]}
      onClick={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      role="button"
      tabIndex={0}
    >
      <span
        className="MuiIconButton-label"
      >
        <svg
          aria-hidden="true"
          className="MuiSvgIcon-root"
          focusable="false"
          role="presentation"
          viewBox="0 0 24 24"
        >
          <path
            d="M10 20v-6h4v6h5v-8h3L12 3 2 12h3v8z"
          />
        </svg>
      </span>
    </span>
  </div>
  <div
    className="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-justify-xs-center MuiGrid-grid-xs-6"
  >
    <img
      alt="Logo"
      src="header1.png"
      width="40%"
    />
  </div>
  <div
    className="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-justify-xs-center MuiGrid-grid-xs-3"
  >
    <svg
      aria-hidden="true"
      className="MuiSvgIcon-root makeStyles-connectIcon-334 makeStyles-connectIcon-335 MuiSvgIcon-fontSizeSmall"
      focusable="false"
      role="presentation"
      viewBox="0 0 24 24"
    >
      <path
        d="M24 24H0V0h24v24z"
        fill="none"
      />
      <circle
        cx="12"
        cy="12"
        r="8"
      />
    </svg>
  </div>
</div>
`;
